--- a/styles/custom.module.css
+++ b/styles/custom.module.css
@@ -1,315 +1,333 @@
 .header {
-    position: relative;
-    height: 80vh;
-    min-height: 600px;
-    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../public/MyProfile.jpg);
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../public/MyProfile.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: #fff;
-  }
-  
+  position: relative;
+  height: 80vh;
+  min-height: 600px;
+  background-image:
+    -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(../public/MyProfile.jpg);
+  background-image:
+    linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(../public/MyProfile.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: #fff;
+}
+
 .header .container {
-    position: relative;
-    height: 100%;
+  position: relative;
+  height: 100%;
 }
 
 .header .headercontent {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 55%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-    color: #fff;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 55%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  color: #fff;
 }
 
 .header .headercontent .headersubtitle {
-    font-weight: 200;
-    font-size: calc(20px + (45 - 20) * ((100vw - 300px) / (1600 - 300)));
+  font-weight: 200;
+  font-size: calc(20px + (45 - 20) * ((100vw - 300px) / (1600 - 300)));
 }
 
 .header .headercontent .headertitle {
-    font-size: calc(40px + (120 - 40) * ((100vw - 300px) / (1600 - 300)));
-    font-weight: bold;
-    line-height: .7;
-    margin-bottom: 25px;
-    color: inherit;
+  font-size: calc(40px + (120 - 40) * ((100vw - 300px) / (1600 - 300)));
+  font-weight: bold;
+  line-height: 0.7;
+  margin-bottom: 25px;
+  color: inherit;
 }
 
 .header .headercontent .headermono {
-    letter-spacing: 2px;
-    font-weight: 500;
-    font-size: calc(12px + (19 - 12) * ((100vw - 300px) / (1600 - 300)));
-    margin-bottom: 40px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  font-size: calc(12px + (19 - 12) * ((100vw - 300px) / (1600 - 300)));
+  margin-bottom: 40px;
 }
 
 @media (max-width: 767.98px) {
-    .header {
-        height: 500px;
-        min-height: 500px;
-    }
-    .header .social-icons {
-        margin: auto;
-    }
-    .header .headercontent {
-        padding: 20px;
-    }
-    .header .headercontent .headermono {
-        letter-spacing: 2px;
-    }
+  .header {
+    height: 500px;
+    min-height: 500px;
+  }
+  .header .social-icons {
+    margin: auto;
+  }
+  .header .headercontent {
+    padding: 20px;
+  }
+  .header .headercontent .headermono {
+    letter-spacing: 2px;
+  }
 }
 
 .headertitle {
-    font-size: 2.4rem;
-    font-weight: bold;
-    opacity: .8;
-    color: #212529;
+  font-size: 2.4rem;
+  font-weight: bold;
+  opacity: 0.8;
+  color: #212529;
 }
 
 .btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  -webkit-transition:
+    color 0.15s ease-in-out,
+    background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+  transition:
+    color 0.15s ease-in-out,
+    background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
 
 @media (prefers-reduced-motion: reduce) {
-    .btn {
-        -webkit-transition: none;
-        transition: none;
-    }
+  .btn {
+    -webkit-transition: none;
+    transition: none;
+  }
 }
 
 .btn:hover {
-    color: #212529;
-    text-decoration: none;
+  color: #212529;
+  text-decoration: none;
 }
 
 .notunderline {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.btn:focus, .btn.focus {
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+.btn:focus,
+.btn.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
 }
 
-.btn.disabled, .btn:disabled {
-    opacity: 0.65;
+.btn.disabled,
+.btn:disabled {
+  opacity: 0.65;
 }
 
 a.btn.disabled,
 fieldset:disabled a.btn {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .btnprimary {
-    color: #fff;
-    background-color: #F85C70;
-    border-color: #F85C70;
+  color: #fff;
+  background-color: #f85c70;
+  border-color: #f85c70;
 }
 
 .btnprimary:hover {
-    color: #fff;
-    background-color: #f63750;
-    border-color: #f62b45;
+  color: #fff;
+  background-color: #f63750;
+  border-color: #f62b45;
 }
 
-.btnprimary:focus, .btnprimary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(249, 116, 133, 0.5);
+.btnprimary:focus,
+.btnprimary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(249, 116, 133, 0.5);
 }
 
-.btnprimary.disabled, .btnprimary:disabled {
-    color: #fff;
-    background-color: #F85C70;
-    border-color: #F85C70;
+.btnprimary.disabled,
+.btnprimary:disabled {
+  color: #fff;
+  background-color: #f85c70;
+  border-color: #f85c70;
 }
 
-.btnprimary:not(:disabled):not(.disabled):active, .btnprimary:not(:disabled):not(.disabled).active,
+.btnprimary:not(:disabled):not(.disabled):active,
+.btnprimary:not(:disabled):not(.disabled).active,
 .show > .btnprimary.dropdown-toggle {
-    color: #fff;
-    background-color: #f62b45;
-    border-color: #f51f3a;
+  color: #fff;
+  background-color: #f62b45;
+  border-color: #f51f3a;
 }
 
-.btnprimary:not(:disabled):not(.disabled):active:focus, .btnprimary:not(:disabled):not(.disabled).active:focus,
+.btnprimary:not(:disabled):not(.disabled):active:focus,
+.btnprimary:not(:disabled):not(.disabled).active:focus,
 .show > .btnprimary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(249, 116, 133, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(249, 116, 133, 0.5);
 }
 
 .aboutsection {
-    border-bottom: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
 }
-  
+
 .aboutsection .aboutcard {
-    padding: 60px;
-    border-right: 1px solid #dee2e6;
+  padding: 60px;
+  border-right: 1px solid #dee2e6;
 }
 
 .aboutsection .aboutcard:last-child {
-    border-right: none;
+  border-right: none;
 }
 
 .fontweightlight {
-    font-weight: 300 !important;
+  font-weight: 300 !important;
 }
 
 .line {
-    display: block;
-    width: 25px;
-    height: 1.5px;
-    background-color: #F85C70;
+  display: block;
+  width: 25px;
+  height: 1.5px;
+  background-color: #f85c70;
 }
 
 .info {
-    color: #6c757d;
-    font-size: 14px;
+  color: #6c757d;
+  font-size: 14px;
 }
 
 .info li {
-    padding-bottom: 8px;
+  padding-bottom: 8px;
 }
 
 .info span {
-    font-weight: 600;
-    font-size: 14px;
-    color: #343a40;
+  font-weight: 600;
+  font-size: 14px;
+  color: #343a40;
 }
 
 .socialicons {
-    list-style-type: none;
-    padding-left: 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    max-width: 180px;
+  list-style-type: none;
+  padding-left: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  max-width: 180px;
 }
 
 .socialicons .sociallink {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .socialicons .sociallink:hover {
-    color: #F85C70;
+  color: #f85c70;
 }
 
 .row {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
 .mlauto {
-    margin-left: auto !important;
+  margin-left: auto !important;
 }
 
 .section {
-    padding: 80px 0 0 0;
+  padding: 80px 0 0 0;
 }
-  
+
 .section .bg-custom-gray {
-    background: rgba(242, 244, 247, 0.15);
+  background: rgba(242, 244, 247, 0.15);
 }
 
 .card {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0;
 }
 
 .cardheader {
-    padding: 0.75rem 1.25rem;
-    margin-bottom: 0;
-    background-color: rgba(0, 0, 0, 0.03);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .cardbody {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 1 auto;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
-    padding: 1.25rem;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
 }
 
 .cardtitle {
-    margin-bottom: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .card {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .card .cardheader {
-    background: transparent;
-    border: none;
+  background: transparent;
+  border: none;
 }
 
 .card .cardheader .hasicon i {
-    background: #fff;
-    position: absolute;
-    top: -28px;
-    border: 7px solid white;
-    overflow: hidden !important;
-    font-size: 35px;
+  background: #fff;
+  position: absolute;
+  top: -28px;
+  border: 7px solid white;
+  overflow: hidden !important;
+  font-size: 35px;
 }
 
 .card .cardbody {
-    font-size: 14px;
-    color: #6c757d;
+  font-size: 14px;
+  color: #6c757d;
 }
 
 .title {
-    font-size: calc(15px + (20 - 15) * ((100vw - 300px) / (1300 - 300)));
+  font-size: calc(15px + (20 - 15) * ((100vw - 300px) / (1300 - 300)));
 }
 
 .projectcount {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .seemore {
-    color: #F85C70;
-    cursor: pointer;
-    margin-bottom: 30px;
+  color: #f85c70;
+  cursor: pointer;
+  margin-bottom: 30px;
 }
